Añadido url al CMS

--- a/index.html
+++ b/index.html
@@ -118,13 +118,17 @@
                     <div class="card bg-light mb-3" style="max-width: 18rem;">
                         <div class="card-header">A CMS</div>
                         <div class="card-body">
-                            <a target="_blank" href="http://13.58.107.88">
+                            <a target="_blank" href="https://cms-pife.herokuapp.com/">
                                 <img class="img-fluid"
                                     src="https://raw.githubusercontent.com/pife00/assets/master/Blog_Home_-_Start_Bootstrap_Template_-_2020-09-23_22.13.27.png"
                                     alt="CMS">
                             </a>
                             <h5 class="card-title">CMS page</h5>
-                            <p class="card-text">Here you can public a blog, comment, and register if you want.</p>
+                            <p class="card-text">Here you can public a blog, comment, and register if you want.
+                        
+                            </p>
+                            <p>user:liz</p>
+                            <p>pass:123</p>
                         </div>
                     </div>
     </section>
