--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +25,7 @@
         <div class="collapse navbar-collapse" id="Menu">
             <ul class="navbar-nav mr-auto nav">
                 <li style="font-size: 25px;" class="nav-item active">
-                    <a  class="nav-link" href="#projects">My Work <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#projects">My Work <span class="sr-only">(current)</span></a>
                 </li>
                 <li style="font-size: 25px;" class="nav-item">
                     <a class="nav-link" href="#contact">Contact</a>
@@ -45,93 +46,24 @@
 
     <br>
     <section id="projects">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm">
-                    <section id="Tribute">
-                        <div class="card bg-light mb-3" style="max-width: 18rem;">
-                            <div class="card-header">A tripute Page</div>
-                            <div class="card-body">
-                                <a target="_blank" href="https://codepen.io/pife00/pen/poywMMG">
-                                    <img class="img-fluid"
-                                        src="https://raw.githubusercontent.com/pife00/assets/master/tribute.PNG"
-                                        alt="tribute">
-                                </a>
-                                <h5 class="card-title">A tripute Page</h5>
-                                <p class="card-text">
-                                A page where tell you who is Hellen Adams Keller a wonderful woman 
-                                </p>
-                            </div>
-                        </div>
-                    </section>
+        <div id="app">
+            <div class="container">
 
-                    <section id="Survey">
-                        <div class="card bg-light mb-3" style="max-width: 18rem;">
-                            <div class="card-header">A quiz page</div>
-                            <div class="card-body">
-                                <a target="_blank" href="https://codepen.io/pife00/pen/NWNvKYJ">
-                                    <img class="img-fluid"
-                                        src="https://raw.githubusercontent.com/pife00/assets/master/survey.PNG"
-                                        alt="survey">
-                                </a>
-                                <h5 class="card-title">Quiz Page</h5>
-                                <p class="card-text">Just a quiz generic</p>
-                            </div>
-                        </div>
-                    </section>
+                <div class="row">
+                    <proyectos v-for="obj in proyectosHtml" v-key="obj.id" v-bind:data="obj"></proyectos>
                 </div>
+            </div>
 
-                <div class="col-sm">
-                    <section id="TF" class="project-tile">
-                        <div class="card bg-light mb-3" style="max-width: 18rem;">
-                            <div class="card-header">A champio Page</div>
-                            <div class="card-body">
-                                <a target="_blank" href="https://codepen.io/pife00/pen/ExKbvmE">
-                                    <img class="img-fluid"
-                                        src="https://raw.githubusercontent.com/pife00/assets/master/page%20Product.PNG"
-                                        alt="Champion">
-                                </a>
-                                <h5 class="card-title">Twisted Fate</h5>
-                                <p class="card-text">This is a page about Twisted fate or TF a champion of lol game.</p>
-                            </div>
-                        </div>
-                    </section>
+            <div class="container">
+                <div class="row">
+                    <proyectos v-for="obj in proyectosPhp" v-key="obj.id" v-bind:data="obj">
 
-                    <section id="Tribute" class="project-tile">
-                        <div class="card bg-light mb-3" style="max-width: 18rem;">
-                            <div class="card-header">A jojo Page</div>
-                            <div class="card-body">
-                                <a target="_blank" href="https://codepen.io/pife00/pen/yLOPQzL">
-                                    <img class="img-fluid"
-                                        src="https://raw.githubusercontent.com/pife00/assets/master/tech%20page.PNG"
-                                        alt="Jojo">
-                                </a>
-                                <h5 class="card-title">Jojo Page</h5>
-                                <p class="card-text">This page is very generic.</p>
-                            </div>
-                        </div>
-                    </section>
                 </div>
-
-                <div class="col-sm">
-                    <section id="CMS"></section>
-                    <div class="card bg-light mb-3" style="max-width: 18rem;">
-                        <div class="card-header">A CMS</div>
-                        <div class="card-body">
-                            <a target="_blank" href="https://cms-pife.herokuapp.com/">
-                                <img class="img-fluid"
-                                    src="https://raw.githubusercontent.com/pife00/assets/master/Blog_Home_-_Start_Bootstrap_Template_-_2020-09-23_22.13.27.png"
-                                    alt="CMS">
-                            </a>
-                            <h5 class="card-title">CMS page</h5>
-                            <p class="card-text">Here you can public a blog, comment, and register if you want.
-                        
-                            </p>
-                            <p>user:liz</p>
-                            <p>pass:123</p>
-                        </div>
-                    </div>
+            </div>
+            </proyectos>
+        </div>
     </section>
+
 
     <hr>
     <footer>
@@ -146,5 +78,75 @@
     </footer>
 
 </body>
+
+<script>
+    Vue.component('proyectos', {
+        props: ['data'],
+        template: `
+<div class="col-md-4">
+<div class="card bg-light mb-3" style="max-width: 18rem;">
+    <div class="card-header">{{ data.titulo }}</div>
+    
+        <a target="_blank" :href="data.link">
+            <img class="card-img-top" :src=data.imagen
+                alt="Jojo">
+        </a>
+    <div class="card-body">
+        <h5 class="card-title"></h5>
+        <p class="card-text">{{ data.descripcion }}</p>
+        <b>{{ data.aditional }}</b>
+    </div>
+</div>
+</div>
+
+`
+    });
+
+    var app = new Vue({
+        el: '#app',
+        data: {
+            proyectosHtml: [{
+                    id: 1,
+                    titulo: "A tripute Page",
+                    link: "https://codepen.io/pife00/pen/poywMMG",
+                    imagen: "https://raw.githubusercontent.com/pife00/assets/master/tribute.PNG",
+                    descripcion: "A page where tell you who is Hellen Adams Keller a wonderful woman"
+                },
+                {
+                    id: 2,
+                    titulo: "A quiz page",
+                    link: "https://codepen.io/pife00/pen/NWNvKYJ",
+                    imagen: "https://raw.githubusercontent.com/pife00/assets/master/survey.PNG",
+                    descripcion: "Just a quiz generic"
+                },
+                {
+                    id: 3,
+                    titulo: "A champio Page",
+                    link: "https://codepen.io/pife00/pen/ExKbvmE",
+                    imagen: "https://raw.githubusercontent.com/pife00/assets/master/page%20Product.PNG",
+                    descripcion: "This is a page about Twisted fate or TF a champion of lol game.",
+                },
+                {
+                    id: 4,
+                    titulo: "A Jojo Page",
+                    link: "https://codepen.io/pife00/pen/yLOPQzL",
+                    imagen: "https://raw.githubusercontent.com/pife00/assets/master/tech%20page.PNG",
+                    descripcion: "A generic page about jojo"
+
+                }
+            ],
+
+            proyectosPhp: [{
+                id: 1,
+                titulo: 'A CMS Page',
+                link: "https://cms-pife.herokuapp.com/",
+                imagen: "https://raw.githubusercontent.com/pife00/assets/master/Blog_Home_-_Start_Bootstrap_Template_-_2020-09-23_22.13.27.png",
+                descripcion: "Here you can public a blog, comment, and register if you want",
+                aditional: 'User: liz, Password 123456'
+            }]
+        }
+
+    });
+</script>
 
 </html>
